--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <footer class="window-footer">Footer</footer>
     </window>
     <script>
-      await init();
+      init();
     </script>
   </body>
 </html>
