terminal intro in hello world window

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         All data can be imported and exported if you want to mess around with
         the setup of the OS without being in the OS.
         <p></p>
+        Run in the terminal: `fsr home welcome.txt`
+        <p></p>
         List of things to implement:
         <ul>
           <li>Ability to change wallpaper</li>
