--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
         in local-storage, so that upon reloading the page, or closing the
         browser, OS state can be restored.
         <p></p>
-        All data can be imported and exported if you want to mess around with
+        TODO: All data can be imported and exported if you want to mess around with
         the setup of the OS without being in the OS.
         <p></p>
         Run in the terminal: `fsr home welcome.txt`
         <p></p>
         List of things to implement:
         <ul>
+          <li>
+            Rework terminal to allow piping, and using commands outside of
+            terminal
+          </li>
           <li>Ability to change wallpaper</li>
           <li>App Launcher</li>
+          <li>Implement import and export of state</li>
           <li>Drag windows with mouse cursor</li>
           <li>Tiling mode, where each window moves to make space for others</li>
           <li>
