--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         All customisations and local changes that should be persistent between
         refreshes of the page are stored in localStorage
         <p></p>
-
+        You can use a custom wallpaper by making a file in the fileSystem that
+        contains a link to the image (or a base64 data uri), and then set the
+        wallpaper by setting --wallpaper to the fileSystem path where you saved
+        the image.
         <p></p>
         TODO: All data can be imported and exported if you want to mess around
         with the setup of the OS without being in the OS.
@@ -52,7 +55,6 @@
             Rework terminal to allow piping, and using commands outside of
             terminal
           </li>
-          <li>Ability to change wallpaper</li>
           <li>App Launcher</li>
           <li>Implement import and export of state</li>
           <li>Drag windows with mouse cursor</li>
