--- a/index.html
+++ b/index.html
@@ -284,12 +284,12 @@
             </td>
           </tr>
           <tr>
-            <td><code>--bg-blur</code></td>
+            <td><code>--panel-bg-blur</code></td>
             <td>
               <input
-                id="setting--bg-blur"
+                id="setting--panel-bg-blur"
                 type="number"
-                onchange="setCSSSetting('--bg-blur', this.value + 'px')"
+                onchange="setCSSSetting('--panel-bg-blur', this.value + 'px')"
               />
             </td>
           </tr>
