finally fixed wallpaper

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               />
             </td>
             <td
+              name="setting_wallpaper_preview"
               id="setting_wallpaper_preview"
               style="
                 background-repeat: no-repeat;
