fix user facing messages to reflect implementation of cat command

--- a/index.html
+++ b/index.html
@@ -25,13 +25,7 @@
         browser, OS state can be restored.
         <p></p>
         The terminal is cool:
-        <code
-          style="
-            background-color: var(--theme-bg-alt2);
-            border: var(--border-width) solid var(--border);
-          "
-          >fsr home welcome.txt</code
-        >
+        <code>`cat home welcome.txt`</code>
         <p></p>
         Web-OS is still in the very early stages of development, new features
         may break various parts of the OS.
