--- a/index.html
+++ b/index.html
@@ -15,107 +15,31 @@
     <!-- ########################## -->
     <window
       name="window_helloWorld"
-      style="--x: 0px; --y: 0px; --width: 370px; --height: 1000px; --z-index: 4"
+      style="
+        --x: 0px;
+        --y: 0px;
+        --width: 370px;
+        --height: 1000px;
+        --z-index: 4;
+        --maximised: 0;
+      "
       onclick="makeMain(this)"
       id="mainWindow"
     >
       <header class="window-header">
-        <div class="fill-left">
-          <svg
-            style="margin: auto 0"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-          >
-            <path
-              d="M21.41 8.64v-.05a10 10 0 00-18.78 0s0 0 0 .05a9.86 9.86 0 000 6.72v.05a10 10 0 0018.78 0s0 0 0-.05a9.86 9.86 0 000-6.72M4.26 14a7.8 7.8 0 010-4h1.86a16.7 16.7 0 000 4Zm.82 2h1.4a12 12 0 001 2.57A8 8 0 015.08 16m1.4-8h-1.4a8 8 0 012.37-2.57A12 12 0 006.48 8M11 19.7A6.34 6.34 0 018.57 16H11Zm0-5.7H8.14a14.4 14.4 0 010-4H11Zm0-6H8.57A6.34 6.34 0 0111 4.3Zm7.92 0h-1.4a12 12 0 00-1-2.57A8 8 0 0118.92 8M13 4.3A6.34 6.34 0 0115.43 8H13Zm0 15.4V16h2.43A6.34 6.34 0 0113 19.7m2.86-5.7H13v-4h2.86a14.4 14.4 0 010 4m.69 4.57a12 12 0 001-2.57h1.4a8 8 0 01-2.4 2.57M19.74 14h-1.86a16 16 0 00.12-2 16 16 0 00-.12-2h1.86a7.8 7.8 0 010 4"
-            />
-          </svg>
-        </div>
+        <div class="fill-left">🌏</div>
         <div>Hello World!</div>
         <div
           class="fill-right windowControl"
           id="window_helloWorld_Control"
         ></div>
       </header>
-      <div class="window-area">
-        Welcome to this website, which aims to be a fully functional graphical
-        OS. This website will demonstrate how Web-OS works, and how you can
-        setup your own distro of Web-OS.
-        <p></p>
-        All customisations made, and files saved, are stored in local-storage,
-        so that upon reloading the page, or closing the browser, OS state can be
-        restored.
-        <p></p>
-        The terminal is cool:
-        <code>`cat welcome.txt`</code>
-        <p></p>
-        Web-OS is still in the very early stages of development, new features
-        may break various parts of the OS. It is highly recommended to reset all
-        your data when a newer version is released.
-        <ul>
-          <li>
-            All fileSystem data is stored in the IndexedDB.<br />
-            <button
-              class="warning-button"
-              style="padding: 0 var(--padding)"
-              onclick="if (confirm('Are you sure you want to fully reset the fileSystem')) { resetFileSystem('fileSystem'); location.reload(); }"
-            >
-              Reset fileSystem
-            </button>
-          </li>
-          <li>
-            All customisations and local changes that should be persistent
-            between refreshes of the page are stored in localStorage.<br />
-            <button
-              class="warning-button"
-              style="padding: 0 var(--padding)"
-              onclick="if (confirm('Are you sure you want to fully reset customisations stored in localStorage')) { localStorage.clear(); location.reload(); }"
-            >
-              Reset localStorage
-            </button>
-          </li>
-          <li>
-            And of course, if everything is reset, it will be as if you have
-            never visited the website before.<br />
-            <button
-              class="warning-button"
-              style="padding: 0 var(--padding)"
-              onclick="resetAll()"
-            >
-              Reset ALL!
-            </button>
-          </li>
-        </ul>
-        You can use a custom wallpaper by making a file in the fileSystem that
-        contains a link to the image (or a base64 data uri), and then set the
-        wallpaper by setting the CSS Setting: <code>`--wallpaper`</code> to the
-        fileSystem path where you saved the image.
-        <p></p>
-        TODO: All data can be imported and exported if you want to mess around
-        with the setup of the OS without being in the OS.
-        <p></p>
-        List of things to implement:
-        <ul>
-          <li>Import and Export of CSS Settings.</li>
-          <li>App Launcher, and permanent closing of apps</li>
-          <li>Multiple of the same window</li>
-          <li>Import and Export of all Data.</li>
-          <li>Drag windows with mouse cursor</li>
-          <li>Tiling mode, where each window moves to make space for others</li>
-          <li>Ability to write programs</li>
-          <li>
-            Remove all text fields, replacing with custom key events, that keep
-            focus (specifically in the terminal)
-          </li>
-          <li>
-            Mock package manager and/or ability to make packages and pull
-            request on github
-          </li>
-        </ul>
-      </div>
+      <iframe
+        src="apps/helloWorld/hello.html"
+        frameborder="0"
+        width="100%"
+        height="100%"
+      ></iframe>
       <footer class="window-footer">
         <span>
           See the <a href="https://github.com/0xF32/Web-OS">Source Code</a>
@@ -135,6 +59,7 @@
         --width: 770px;
         --height: 570px;
         --z-index: 1;
+        --maximised: 0;
       "
       onclick="makeMain(this)"
     >
@@ -166,6 +91,7 @@
         --width: 470px;
         --height: 630px;
         --z-index: 2;
+        --maximised: 0;
       "
       onclick="makeMain(this)"
     >
@@ -649,6 +575,7 @@
         --width: 360px;
         --height: 150px;
         --z-index: 3;
+        --maximised: 0;
       "
       onclick="makeMain(this)"
     >
@@ -692,6 +619,75 @@
         Export and Import Buttons can go here!
       </footer>
     </window>
+    <!-- ################## -->
+    <!-- #                # -->
+    <!-- #   Dev Window   # -->
+    <!-- #                # -->
+    <!-- ################## -->
+    <window
+      name="window_DEV"
+      style="
+        --x: 1000px;
+        --y: 500px;
+        --width: 400px;
+        --height: 200px;
+        --z-index: 8;
+        --maximised: 0;
+      "
+      onclick="makeMain(this)"
+    >
+      <header class="window-header">
+        <div class="fill-left"><code>DEV</code></div>
+        <div>DEV</div>
+      </header>
+      <div class="window-area">
+        <table>
+          <tr>
+            <th>Button</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td>
+              <button
+                class="warning-button"
+                style="padding: 0 var(--padding)"
+                onclick="if (confirm('Are you sure you want to fully reset the fileSystem')) { resetFileSystem('fileSystem'); location.reload(); }"
+              >
+                Reset fileSystem
+              </button>
+            </td>
+            <td>Deletes all data in the indexedDB</td>
+          </tr>
+          <tr>
+            <td>
+              <button
+                class="warning-button"
+                style="padding: 0 var(--padding)"
+                onclick="if (confirm('Are you sure you want to fully reset customisations stored in localStorage')) { localStorage.clear(); location.reload(); }"
+              >
+                Reset localStorage
+              </button>
+            </td>
+            <td>Deletes all data in the localStorage</td>
+          </tr>
+          <tr>
+            <td>
+              <button
+                class="warning-button"
+                style="padding: 0 var(--padding)"
+                onclick="resetAll()"
+              >
+                Reset ALL!
+              </button>
+            </td>
+            <td>Reset everything to original state</td>
+          </tr>
+        </table>
+      </div>
+      <footer class="window-footer">
+        If this window exists, the website is unstable
+      </footer>
+    </window>
     <!-- ####################### -->
     <!-- #                     # -->
     <!-- #   Taskbar Window?   # -->
@@ -705,6 +701,7 @@
         --width: 960px;
         --height: 30px;
         --z-index: 5;
+        --maximised: 0;
         color: var(--theme-main);
         -webkit-user-select: none;
         user-select: none;
@@ -818,6 +815,80 @@
         </svg>
         <div class="fill-right">Tray</div>
       </div>
+    </window>
+    <!-- #################### -->
+    <!-- #                  # -->
+    <!-- #   Music Window   # -->
+    <!-- #                  # -->
+    <!-- #################### -->
+    <window
+      name="window_Music"
+      style="
+        --x: 1920px;
+        --y: 900px;
+        --width: 400px;
+        --height: 500px;
+        --z-index: 6;
+        --maximised: 0;
+      "
+      onclick="makeMain(this)"
+    >
+      <header class="window-header">
+        <div class="fill-left"><code>🎵</code></div>
+        <div>Music Player</div>
+        <div class="fill-right windowControl" id="window_Music_Control"></div>
+      </header>
+      <iframe
+        src="apps/music/music.html"
+        frameborder="0"
+        width="100%"
+        height="100%"
+      ></iframe>
+    </window>
+    <!-- ############################ -->
+    <!-- #                          # -->
+    <!-- #   Custom iFrame Window   # -->
+    <!-- #                          # -->
+    <!-- ############################ -->
+    <window
+      name="window_customIFrame"
+      style="
+        --x: 1920px;
+        --y: 0px;
+        --width: 500px;
+        --height: 800px;
+        --z-index: 7;
+        --maximised: 0;
+      "
+      onclick="makeMain(this)"
+    >
+      <header class="window-header">
+        <div class="fill-left">🌐</div>
+        <div>Custom iFrame</div>
+        <div
+          class="fill-right windowControl"
+          id="window_customIFrame_Control"
+        ></div>
+      </header>
+      <div class="window-area" style="margin: 0">
+        <input
+          style="width: calc(100% - 2 * var(--padding)); padding-bottom: var(--padding);"
+          type="text"
+          value="https://bandcamp.com/EmbeddedPlayer/transparent=true/bgcol=000/album=399249764/size=large/linkcol=fff"
+          onchange="document.getElementById('customIFrame_frame').src = this.value"
+        />
+        <div style="width: 100%; height: calc(100% - 1em - 2 * var(--padding))">
+          <iframe
+            src="https://bandcamp.com/EmbeddedPlayer/transparent=true/bgcol=000/album=399249764/size=large/linkcol=fff"
+            width="100%"
+            height="100%"
+            frameborder="0"
+            allowtransparency="true"
+            id="customIFrame_frame"
+          ></iframe>
+        </div>
+      </div>
+      <footer class="window-footer">Testing external iframes</footer>
     </window>
     <script>
       init();
