--- a/index.html
+++ b/index.html
@@ -5,79 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web OS Demo</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer async></script>
   </head>
   <body>
-    <!-- ########################## -->
-    <!-- #                        # -->
-    <!-- #   Hello World Window   # -->
-    <!-- #                        # -->
-    <!-- ########################## -->
-    <window
-      name="window_helloWorld"
-      style="
-        --x: 0px;
-        --y: 0px;
-        --width: 370px;
-        --height: 1000px;
-        --z-index: 4;
-        --maximised: 0;
-      "
-      onclick="makeMain(this)"
-      id="mainWindow"
-    >
-      <header class="window-header">
-        <div class="fill-left">🌏</div>
-        <div>Hello World!</div>
-        <div
-          class="fill-right windowControl"
-          id="window_helloWorld_Control"
-        ></div>
-      </header>
-      <iframe
-        src="apps/helloWorld/hello.html"
-        frameborder="0"
-        width="100%"
-        height="100%"
-      ></iframe>
-      <footer class="window-footer">
-        <span>
-          See the <a href="https://github.com/0xF32/Web-OS">Source Code</a>
-        </span>
-      </footer>
-    </window>
-    <!-- ####################### -->
-    <!-- #                     # -->
-    <!-- #   Terminal Window   # -->
-    <!-- #                     # -->
-    <!-- ####################### -->
-    <window
-      name="window_terminal"
-      style="
-        --x: 500px;
-        --y: 60px;
-        --width: 770px;
-        --height: 570px;
-        --z-index: 1;
-        --maximised: 0;
-      "
-      onclick="makeMain(this)"
-    >
-      <header class="window-header">
-        <div class="fill-left"><code>&lt;/&gt;</code></div>
-        <div>Terminal</div>
-        <div
-          class="fill-right windowControl"
-          id="window_terminal_Control"
-        ></div>
-      </header>
-      <code
-        class="window-area terminal"
-        id="active_terminal"
-        onclick="document.getElementById('terminal_input').focus()"
-      >
-      </code>
-    </window>
     <!-- ########################### -->
     <!-- #                         # -->
     <!-- #   CSS Settings Window   # -->
@@ -86,10 +16,10 @@
     <window
       name="window_CSSSettings"
       style="
-        --x: 1390px;
+        --x: 940px;
         --y: 0px;
-        --width: 470px;
-        --height: 630px;
+        --width: 460px;
+        --height: 490px;
         --z-index: 2;
         --maximised: 0;
       "
@@ -570,10 +500,10 @@
     <window
       name="window_JSSettings"
       style="
-        --x: 1500px;
-        --y: 850px;
-        --width: 360px;
-        --height: 150px;
+        --x: 0px;
+        --y: 520px;
+        --width: 370px;
+        --height: 170px;
         --z-index: 3;
         --maximised: 0;
       "
@@ -627,11 +557,11 @@
     <window
       name="window_DEV"
       style="
-        --x: 1000px;
-        --y: 500px;
+        --x: 400px;
+        --y: 520px;
         --width: 400px;
-        --height: 200px;
-        --z-index: 8;
+        --height: 170px;
+        --z-index: 7;
         --maximised: 0;
       "
       onclick="makeMain(this)"
@@ -639,6 +569,7 @@
       <header class="window-header">
         <div class="fill-left"><code>DEV</code></div>
         <div>DEV</div>
+        <div class="fill-right windowControl" id="window_DEV_Control"></div>
       </header>
       <div class="window-area">
         <table>
@@ -698,9 +629,9 @@
       style="
         --x: 400px;
         --y: 0px;
-        --width: 960px;
+        --width: 510px;
         --height: 30px;
-        --z-index: 5;
+        --z-index: 6;
         --maximised: 0;
         color: var(--theme-main);
         -webkit-user-select: none;
@@ -726,18 +657,27 @@
 
         <div id="window_helloWorld_Control">
           <button class="window-button" onclick="minimiseWindow(this)">
-            <svg
-              style="margin: auto 0"
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="22"
-              viewBox="0 0 24 22"
-              fill="currentColor"
-            >
-              <path
-                d="M21.41 8.64v-.05a10 10 0 00-18.78 0s0 0 0 .05a9.86 9.86 0 000 6.72v.05a10 10 0 0018.78 0s0 0 0-.05a9.86 9.86 0 000-6.72M4.26 14a7.8 7.8 0 010-4h1.86a16.7 16.7 0 000 4Zm.82 2h1.4a12 12 0 001 2.57A8 8 0 015.08 16m1.4-8h-1.4a8 8 0 012.37-2.57A12 12 0 006.48 8M11 19.7A6.34 6.34 0 018.57 16H11Zm0-5.7H8.14a14.4 14.4 0 010-4H11Zm0-6H8.57A6.34 6.34 0 0111 4.3Zm7.92 0h-1.4a12 12 0 00-1-2.57A8 8 0 0118.92 8M13 4.3A6.34 6.34 0 0115.43 8H13Zm0 15.4V16h2.43A6.34 6.34 0 0113 19.7m2.86-5.7H13v-4h2.86a14.4 14.4 0 010 4m.69 4.57a12 12 0 001-2.57h1.4a8 8 0 01-2.4 2.57M19.74 14h-1.86a16 16 0 00.12-2 16 16 0 00-.12-2h1.86a7.8 7.8 0 010 4"
-              />
-            </svg>
+            🌏
+          </button>
+        </div>
+
+        <svg
+          style="margin: auto"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="22"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M12 1 12 23" />
+        </svg>
+
+        <div id="window_customIFrame_Control">
+          <button class="window-button" onclick="minimiseWindow(this)">
+            🌐
           </button>
         </div>
 
@@ -758,6 +698,26 @@
         <div id="window_terminal_Control">
           <button class="window-button" onclick="minimiseWindow(this)">
             <code style="margin: auto 0">&lt;/&gt;</code>
+          </button>
+        </div>
+
+        <svg
+          style="margin: auto"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="22"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M12 1 12 23" />
+        </svg>
+
+        <div id="window_Music_Control">
+          <button class="window-button" onclick="minimiseWindow(this)">
+            🎵
           </button>
         </div>
 
@@ -800,6 +760,27 @@
             <code style="margin: auto 0">JS</code>
           </button>
         </div>
+
+        <svg
+          style="margin: auto"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="22"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M12 1 12 23" />
+        </svg>
+
+        <div id="window_DEV_Control">
+          <button class="window-button" onclick="minimiseWindow(this)">
+            <code style="margin: auto 0">DEV</code>
+          </button>
+        </div>
+
         <svg
           style="margin: auto"
           xmlns="http://www.w3.org/2000/svg"
@@ -824,11 +805,11 @@
     <window
       name="window_Music"
       style="
-        --x: 1920px;
-        --y: 900px;
+        --x: 830px;
+        --y: 520px;
         --width: 400px;
-        --height: 500px;
-        --z-index: 6;
+        --height: 480px;
+        --z-index: 5;
         --maximised: 0;
       "
       onclick="makeMain(this)"
@@ -853,11 +834,11 @@
     <window
       name="window_customIFrame"
       style="
-        --x: 1920px;
+        --x: 1430px;
         --y: 0px;
         --width: 500px;
         --height: 800px;
-        --z-index: 7;
+        --z-index: 4;
         --maximised: 0;
       "
       onclick="makeMain(this)"
@@ -872,7 +853,10 @@
       </header>
       <div class="window-area" style="margin: 0">
         <input
-          style="width: calc(100% - 2 * var(--padding)); padding-bottom: var(--padding);"
+          style="
+            width: calc(100% - 2 * var(--padding));
+            padding-bottom: var(--padding);
+          "
           type="text"
           value="https://bandcamp.com/EmbeddedPlayer/transparent=true/bgcol=000/album=399249764/size=large/linkcol=fff"
           onchange="document.getElementById('customIFrame_frame').src = this.value"
@@ -890,8 +874,5 @@
       </div>
       <footer class="window-footer">Testing external iframes</footer>
     </window>
-    <script>
-      init();
-    </script>
   </body>
 </html>
