add wallpaper, change theme, and don't load iframe with external bloat

--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@
             padding-bottom: var(--padding);
           "
           type="text"
-          value="https://bandcamp.com/EmbeddedPlayer/transparent=true/bgcol=000/album=399249764/size=large/linkcol=fff"
+          value="./"
           onchange="document.getElementById('customIFrame_frame').src = this.value"
         />
         <div style="width: 100%; height: calc(100% - 1em - 2 * var(--padding))">
           <iframe
-            src="https://bandcamp.com/EmbeddedPlayer/transparent=true/bgcol=000/album=399249764/size=large/linkcol=fff"
+            src="./"
             width="100%"
             height="100%"
             frameborder="0"
